@@ -1,8 +1,6 @@
 package mixin;
 
-import mixin.annotations.Method.AnnotationsMethod;
-import mixin.annotations.Method.OverwriteMethod;
-import mixin.annotations.Method.ReturnValueMethod;
+import mixin.annotations.Method.*;
 import mixin.annotations.field.AnnotationsField;
 import org.objectweb.asm.*;
 import org.objectweb.asm.Type;
@@ -35,20 +33,32 @@ public class TargetByteManipulator extends AbstractByteManipulator {
         mixinClass = Agent.mixinClasses.get(targetClass);
     }
 
-    private Method filterMethods(List<Method> methods, String name, String descriptor) {
+    private List<Method> filterMethods(List<Method> methods, String name, String descriptor) {
         List<Method> methodList = methods.stream().filter(method -> {
+            if(!Modifier.isStatic(method.getModifiers()))
+                throw new RuntimeException(mixinClass.getName() + "." + method.getName() + " must be static");
+
             int isMethod = 0;
             if(method.isAnnotationPresent(OverwriteMethod.class))
                 isMethod += method.getAnnotation(OverwriteMethod.class).value().equals(name + descriptor) ? 1 : 0;
             if(method.isAnnotationPresent(ReturnValueMethod.class))
                 isMethod += method.getAnnotation(ReturnValueMethod.class).value().equals(name + descriptor) ? 1 : 0;
+            if(method.isAnnotationPresent(InjectHead.class)) {
+                String injectDescriptor = method.getAnnotation(InjectHead.class).value();
+                if(injectDescriptor.split("\\(")[0].equals("<init>")) throw new IllegalArgumentException("cannot InjectHead a constructor");
+                isMethod += injectDescriptor.equals(name + descriptor) ? 1 : 0;
+            }
+            if(method.isAnnotationPresent(InjectTail.class)) {
+                String injectDescriptor = method.getAnnotation(InjectTail.class).value();
+                if(!injectDescriptor.split("\\)")[1].equals("V")) throw new IllegalArgumentException("InjectTail in only allowed on void methods and constructors");
+                isMethod += injectDescriptor.equals(name + descriptor) ? 1 : 0;
+            }
 
             return isMethod != 0;
-        }).toList();
+        }).collect(Collectors.toList());
 
 
-        if(methodList.size() > 1) throw new RuntimeException(name + " cannot be mixined more than once");
-        return methodList.size() == 1 ? methodList.get(0) : null;
+        return methodList;
     }
 
     private void addAnnotationsToMethod(MethodVisitor methodVisitor, Method mixinMethod, Executable targetMethod) {
@@ -122,7 +132,7 @@ public class TargetByteManipulator extends AbstractByteManipulator {
                 public MethodVisitor visitMethod(int access, String name, String descriptor, String signature, String[] exceptions) {
                     MethodVisitor methodVisitor = super.visitMethod(access, name, descriptor, signature, exceptions);
 
-                    Method mixinMethod = filterMethods(Arrays.stream(mixinClass.getDeclaredMethods()).toList(), name, descriptor);
+                    List<Method> methodList = filterMethods(Arrays.stream(mixinClass.getDeclaredMethods()).toList(), name, descriptor);
                     Method annotationsMethod = getAnnotationMethodSetter(Arrays.stream(mixinClass.getDeclaredMethods()).toList(), name, descriptor);
 
 
@@ -133,7 +143,7 @@ public class TargetByteManipulator extends AbstractByteManipulator {
                         targetMethod = getMethod(getClassByName(classReader.getClassName().replace("/", ".")), name, Arrays.stream(getArgumentTypes(descriptor)).map(type -> getClassByName(type.getClassName())).toArray(Class[]::new));
                     }
 
-                    if(mixinMethod == null) {
+                    if(methodList.size() == 0) {
                         if(annotationsMethod != null) {
                             addAnnotationsToMethod(methodVisitor, annotationsMethod, targetMethod);
                         }
@@ -144,30 +154,49 @@ public class TargetByteManipulator extends AbstractByteManipulator {
                             addAnnotationsToMethod(methodVisitor, null, targetMethod);
                         }
 
-                        if(!Modifier.isStatic(mixinMethod.getModifiers()))
-                            throw new RuntimeException(mixinClass.getName() + "." + mixinMethod.getName() + " must be static");
 
-                        if(targetMethod.getClass() == Constructor.class) {
-                            ConstructorSetupHandler.generateMethodBytecode(methodVisitor);
-                        }
+                        return new MethodVisitor(Opcodes.ASM9, methodVisitor) {
 
-                        if(mixinMethod.isAnnotationPresent(OverwriteMethod.class))
-                            OverwriteMethodHandler.generateMethodBytecode(mixinMethod.getName(), getDescriptor(mixinMethod), (access & ACC_STATIC) != 0, mixinClass, methodVisitor);
-                        if(mixinMethod.isAnnotationPresent(ReturnValueMethod.class)) {
+                            @Override
+                            public void visitCode() {
+                                methodList.forEach(mixinMethod -> {
 
-                            return new MethodVisitor(Opcodes.ASM9, methodVisitor) {
-                                @Override
-                                public void visitInsn(int opcode) {
-                                    if (opcode <= Opcodes.ARETURN && opcode >= Opcodes.IRETURN) {
-                                        ReturnValueMethodHandler.generateMethodBytecode(mixinMethod.getName(), getDescriptor(mixinMethod), (access & ACC_STATIC) != 0, mixinClass, this, ARETURN-opcode);
+                                    if(mixinMethod.isAnnotationPresent(OverwriteMethod.class)) {
+                                        if(targetMethod.getClass() == Constructor.class) {
+                                            ConstructorSetupHandler.generateMethodBytecode(methodVisitor);
+                                        }
+
+                                        OverwriteMethodHandler.generateMethodBytecode(mixinMethod.getName(), getDescriptor(mixinMethod), (access&ACC_STATIC) != 0, mixinClass, this);
                                     }
+                                    if(mixinMethod.isAnnotationPresent(InjectHead.class)) {
+                                        InjectHeadMethodHandler.generateMethodBytecode(mixinMethod.getName(), getDescriptor(mixinMethod), (access&ACC_STATIC) != 0, mixinClass, this);
+                                       super.visitCode();
+                                    }
+                                });
+                            }
 
-                                    super.visitInsn(opcode);
+                            @Override
+                            public void visitInsn(int opcode) {
+                                if(opcode <= ARETURN && opcode >= IRETURN) {
+
+                                    methodList.forEach(mixinMethod -> {
+
+                                        if(mixinMethod.isAnnotationPresent(ReturnValueMethod.class)) {
+                                            ReturnValueMethodHandler.generateMethodBytecode(mixinMethod.getName(), getDescriptor(mixinMethod), (access&ACC_STATIC) != 0, mixinClass, this, ARETURN - opcode);
+                                        }
+                                    });
+                                } else if(opcode == RETURN) {
+                                    methodList.forEach(mixinMethod -> {
+
+                                        if(mixinMethod.isAnnotationPresent(InjectTail.class)) {
+                                            InjectHeadMethodHandler.generateMethodBytecode(mixinMethod.getName(), getDescriptor(mixinMethod), (access&ACC_STATIC) != 0, mixinClass, this);
+                                        }
+                                    });
                                 }
-                            };
-                        }
 
-                        return null;
+                                super.visitInsn(opcode);
+                            }
+                        };
                     }
                 }
 
@@ -233,12 +262,7 @@ public class TargetByteManipulator extends AbstractByteManipulator {
             mv.visitInsn(AASTORE);
 
             //load parameters
-            for(int i = 1;i < parameters.length;i++) {
-                mv.visitInsn(DUP);
-                mv.visitLdcInsn(i);
-                mv.visitVarInsn(ALOAD, i);
-                mv.visitInsn(AASTORE);
-            }
+            loadArgs(parameters, 1, mv);
 
             mv.visitMethodInsn(INVOKESTATIC, "mixin/AbstractByteManipulator", "callMethod", "(Ljava/lang/String;Ljava/lang/String;Ljava/lang/Object;[Ljava/lang/String;[Ljava/lang/Object;)Ljava/lang/Object;", false);
 
@@ -246,6 +270,44 @@ public class TargetByteManipulator extends AbstractByteManipulator {
 
             mv.visitMaxs(0, 0);
             mv.visitEnd();
+        }
+    }
+
+    private static class InjectHeadMethodHandler {
+
+        public static void generateMethodBytecode(String mixinName, String descriptor, boolean isTargetStatic, Class<?> mixinClass, MethodVisitor mv) {
+
+            mv.visitLdcInsn(mixinClass.getName()); // Pushes the class reference onto the stack
+            mv.visitLdcInsn(mixinName); // Pushes the method name onto the stack
+
+            mv.visitInsn(ACONST_NULL);
+
+            Type[] parameters = getArgumentTypes(descriptor);
+            mv.visitLdcInsn(parameters.length); // Push the number of parameters onto the stack
+            mv.visitTypeInsn(ANEWARRAY, "java/lang/String"); // Creates an empty array of Class references
+
+            //load parameters
+            for(int i = 0; i < parameters.length; i++) {
+                mv.visitInsn(DUP);
+                mv.visitLdcInsn(i);
+                mv.visitLdcInsn(parameters[i].getClassName());
+                mv.visitInsn(AASTORE);
+            }
+
+            mv.visitLdcInsn(parameters.length); // Push the number of parameters onto the stack
+            mv.visitTypeInsn(ANEWARRAY, "java/lang/Object"); // Creates an empty array of Class references
+
+            mv.visitInsn(DUP);
+            mv.visitLdcInsn(0);
+            if(isTargetStatic) mv.visitInsn(ACONST_NULL); else mv.visitVarInsn(ALOAD, 0);
+            mv.visitInsn(AASTORE);
+
+            //load parameters
+            loadArgs(parameters, 1, mv);
+
+            mv.visitMethodInsn(INVOKESTATIC, "mixin/AbstractByteManipulator", "callMethod", "(Ljava/lang/String;Ljava/lang/String;Ljava/lang/Object;[Ljava/lang/String;[Ljava/lang/Object;)Ljava/lang/Object;", false);
+
+            mv.visitInsn(POP);
         }
     }
 
@@ -292,13 +354,7 @@ public class TargetByteManipulator extends AbstractByteManipulator {
             }
             mv.visitInsn(AASTORE);
 
-            //load parameters
-            for(int i = 2; i < parameters.length; i++) {
-                mv.visitInsn(DUP);
-                mv.visitLdcInsn(i);
-                mv.visitVarInsn(ALOAD, i);
-                mv.visitInsn(AASTORE);
-            }
+            loadArgs(parameters, 2, mv);
 
             mv.visitMethodInsn(INVOKESTATIC, "mixin/AbstractByteManipulator", "callMethod", "(Ljava/lang/String;Ljava/lang/String;Ljava/lang/Object;[Ljava/lang/String;[Ljava/lang/Object;)Ljava/lang/Object;", false);
             if(Type.getReturnType(descriptor).getSort() >= 9)  mv.visitTypeInsn(CHECKCAST, Type.getReturnType(descriptor).getInternalName());
